# hwav5

./: .dockerignore  .env.example  .env.workflows.example  .pre-commit-config.yaml  BREAKING_CHANGES.md  CHANGELOG.md  CHANGELOG_OPINION_BASED_PROMPTING.md  CHANGELOG_long_term_memory.md  CHANGELOG_v5.2.3.19.md  CHANGELOG_v5.2.3.20.md  CHANGELOG_v5.2.3.22.md  CHANGELOG_v5.2.3.23.md  CHANGELOG_v5.2.3.24.md  CHANGELOG_v5.2.3.25.md  CHANGELOG_v5.2.3.26.md  CHANGELOG_v5.2.3.27.md  CHANGELOG_v5.2.3.28.md  CHANGELOG_v5.3.0_hybrid.md  CHANGELOG_v5.3.22.md  CHANGELOG_v5.4.0.md  CHANGELOG_v5.4.2.md  CHANGELOG_v5.4.3.md  CHANGELOG_v5.4.4.md  CHANGELOG_v5.4.5.md  CHANGELOG_v5.4.6.md  CHANGELOG_v5.4.7.md  CHANGELOG_v5.4.8.md  CHANGELOG_v5.4.9.md  CHANGELOG_v5.5.0.md  CHANGELOG_v5.6.0.md  CHANGELOG_v5.7.0.md  CHANGELOG_v5.7.1.md  CHANGELOG_v5.8.0.md  CHANGELOG_v5.9.4.md  CHANGELOG_v5.9.5.md  CHANGELOG_v5.9.6.md  CHANGELOG_v5.9.8_AUTOMATION.md  CHANGELOG_v5.9.9_RERANKER_GATING.md  CLEANUP_ANALYSIS.md  CODE_REVIEW_REPORT.md  (+36 more)
alembic/: env.py
alembic/versions/: 20241210_0001_001_initial_schema_initial_schema.py  20241210_0001_initial_schema.py  20241211_0002_admin_users.py  20241216_0003_golden_record_fields.py
backups/sqlite_stores/: admin_config.py  admin_config_safe.py  audit_queue.py  context_store.py  tws_status_store.py  user_behavior.py
config/: agents.yaml  ai.toml  ai_config.json  graphrag.toml  llm.toml  monitoring.toml  nginx.conf  nginx_admin_panel.conf  redis-stack.conf.example  redis_strategy.yaml  resync.service  system.toml
config/workflows/: prefect_deployments.yaml
deploy/: ollama-override.conf  production-deploy.sh
deploy/systemd/: resync-api.service  resync-monitor.service
docs/: AGENT_ROUTER_ARCHITECTURE.md  ANALISE_COMPLETA_v5.3.9.md  ANALISE_CORRIGIDA_TWS_JOBLOG.md  ANALISE_FINAL_WORKSTATION_METRICS.md  API_DOCUMENTATION.md  APPROVED_STRUCTURE.md  CACHE_L1_DECISION.md  CHANGELOG.md  CHANGES_BLOCKING_CALLS_FIX.md  CHAT_CONVERSATION_SUPPORT.md  CODE_REVIEW_REPORT.md  COMPONENT_REFERENCE.md  CONTINUAL_LEARNING.md  CORE_ANALYSIS_REPORT.md  CORE_REFACTORING_PLAN.md  CRITICAL_FIXES_PLAN_v5.3.5.md  CRITICAL_FIXES_PLAN_v5.3.7.md  CRITICAL_FIXES_PLAN_v5.3.8.md  DATABASE_ARCHITECTURE.md  DATABASE_POSTGRESQL_MIGRATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_v5.3.19.md  DESCOBERTA_CRITICA.md  ENTERPRISE_MODULES.md  EXECUTIVE_SUMMARY.md  FASE_2.5_IDEMPOTENCY_IMPLEMENTATION.md  FASE_3_RFC_IMPLEMENTATION.md  GUIA_INTEGRACAO.md  HEALTH_REFACTORING_PLAN.md  HYBRID_RETRIEVER_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH.md  LANGGRAPH_PARALLEL.md  MIGRATION_AIOHTTP_TO_HTTPX.md  MIGRATION_GUIDE_V5_3.md  MONITORING_DASHBOARD.md  (+51 more)
docs/architecture/: API_STRUCTURE.md  ARCHITECTURE_V5_3.md  MODEL_ARCHITECTURE.md  RESYNC_ARCHITECTURAL_DIAGRAMS.md  REYNC_ARCHITECTURE_ANALYSIS.md  architecture-diagram.md  architecture-optimization-diagram.md  architecture-optimization-plan.md  service_mesh.md
docs/changelog/: CHANGELOG.md  CHANGELOG_v5.2.1.md
docs/guides/: CI_CD_IMPROVEMENTS.md  CODING_STANDARDS.md  CONTRIBUTING.md  DATABASE_CONNECTION_THRESHOLD_GUIDE.md  DEPENDENCY_CONSOLIDATION.md  EXCEPTION_HIERARCHY.md  LOGGING_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_README.md  PERFORMANCE_SECURITY_OPTIMIZATION.md  REDIS_WINDOWS_SETUP.md  SECURITY_CONFIGURATION_GUIDE.md  VERSIONING.md  dependency_injection.md  deployment_checklist.md  migration_runbook.md
docs/implementation/: CONNECTION_POOL_IMPLEMENTATION_SUMMARY.md  MELHORIAS_IMPLEMENTADAS.md  MEMORY_BOUNDS_IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETED.md  PLANO_MELHORIA_ERRO_QUALIDADE.md  REQUIREMENTS_VERIFICATION.md  RESOLUCAO_DEPENDENCIAS_CIRCULARES_RELATORIO_FINAL.md
docs/reports/: ANALYSIS_AND_IMPROVEMENTS_REPORT.md  (+30 more)
examples/: opinion_based_prompting_example.py
requirements/: README.md  base.txt  dev.txt  fastapi.txt  prod.txt
resync/: ESTRUTURA.md  __init__.py  app_factory.py  csp_validation.py  environment_managers.py  lifespan.py  main.py  settings.py  settings_legacy.py  settings_types.py  settings_validators.py  test_agents.py  todo2.md
scripts/: analyze_cache_metrics.py  analyze_core_structure.py  auto_fix_v5_3_9.py  baseline_metrics.py  benchmark_optimizations.py  benchmark_performance.py  benchmark_performance_fixed.py  check_requirements.py  code_quality_utils.py  configure_security.py  create_core_structure.sh  demo_optimizations.py  deploy_semantic_cache.sh  fix_b904.py  fix_sim117.py  fix_typing_imports.py  migrate_to_postgresql.py  refactor_helper.py  resync-self-healing.service  resync.service  setup_linux.sh  setup_redis_stack.sh  simple_benchmark.py  start_automation.sh  stop_automation.sh  stress_testing.py  test_field_boosting.py  test_hybrid_weights.py  test_ollama_integration.py  test_query_cache_metrics.py  validate_config.py  validate_refactoring.sh  validate_v5318.sh
templates/: admin.html  health.html  index.html  metrics_dashboard.html  monitoring.html  realtime_dashboard.html  revisao.html
tests/: async_iterator_mock.py  conftest.py  simple_test.py  test_app.py  test_async_cache.py  test_async_cache_comprehensive.py  test_async_cache_enhancements.py  test_async_cache_simple.py  test_cache_bounds.py  test_cache_improvements.py  test_cache_paranoia_mode.py  test_cache_performance.py  test_chaos_engineering.py  test_config_watcher.py  test_cors_configuration.py  test_cors_monitoring.py  test_csp_integration.py  test_csp_middleware.py  test_csp_performance.py  test_csp_validation.py  test_di_container_enhanced.py  test_encoding_compatibility.py  test_enhanced_security.py  test_error_handling_basic.py  test_error_models_only.py  test_exceptions.py  test_exceptions_comprehensive.py  test_health_checks.py  test_health_integration.py  test_idempotency.py  test_improved_cache.py  test_main_routes.py  test_migration_managers.py  test_new_features.py  test_new_features_simple.py  test_new_features_standalone.py  test_proactive_monitoring.py  test_prompt_formatter.py  test_rag_cb.py  test_rate_limiter_improved.py  (+17 more)
(+886 files in other folders)
