[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resync"
version = "0.1.0"
description = "Qdrant-only RAG microservice for AI document retrieval"
authors = [{ name = "HWA Team", email = "dev-team@hwa.ai" }]
dependencies = [
    "qdrant-client>=1.11.3",
    "tiktoken>=0.7.0",
    "prometheus-client>=0.20.0",
    "redis[hiredis]>=5.0.1",
    "networkx>=3.2",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "isort>=5.13",
    "pylint>=3.0",
]

[tool.importlinter]
root_package = "resync"

[[tool.importlinter.contracts]]
name = "No circular imports"
type = "layers"
layers = ["resync"]
forbidden_layers = ["resync"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "RET", # flake8-return
]

ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "N812", # lowercase imported as non-lowercase
]

[tool.ruff.lint.per-file-ignores]
"resync/core/__init__.py" = ["F401"]  # Barrel module - re-exports symbols
"resync/core/health/__init__.py" = ["F401"]  # Barrel module - re-exports symbols
