[project]
name = "resync"
version = "5.9.8"
description = "HCL Workload Automation AI Interface - Enterprise TWS Management Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Resync Team", email = "team@resync.dev"}
]
keywords = [
    "tws",
    "workload-automation",
    "hcl",
    "ai",
    "llm",
    "graphrag",
    "fastapi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # Core Web Framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "starlette==0.41.3",
    "python-multipart==0.0.19",
    
    # Database - PostgreSQL Unified Stack
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pgvector==0.3.6",
    
    # Authentication & Security
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    
    # HTTP Clients
    "httpx==0.28.1",
    "aiohttp==3.11.11",
    
    # Validation & Data Models
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    
    # Configuration
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "toml==0.10.2",
    
    # File Operations
    "watchdog==6.0.0",
    "aiofiles==24.1.0",
    
    # System Monitoring & Runtime Utils
    "psutil==6.1.1",
    "numpy==2.2.1",
    "cachetools==5.5.0",
    "networkx==3.4.2",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    
    # LLM Integration
    "litellm==1.55.8",
    "openai==1.58.1",
    "anthropic==0.42.0",
    "tiktoken==0.8.0",
    
    # AI Agent Framework
    "langgraph==0.2.60",
    
    # AI Observability & Prompt Management
    "langfuse==2.57.1",
    
    # AI Monitoring & Drift Detection
    "evidently==0.4.48",
    "pandas==2.2.3",
    
    # Resilience & Performance Patterns
    "tenacity==9.0.0",
    "pybreaker==1.2.0",
    
    # Document Processing (RAG)
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "pypdf==5.1.0",
    
    # Caching
    "redis[hiredis]==5.2.1",
    "aiocache==0.12.3",
    
    # Logging
    "structlog==24.4.0",
    
    # Performance optimizations
    "uvloop==0.21.0",
    "httptools==0.6.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    
    # Code Quality
    "ruff==0.8.4",
    "black==24.10.0",
    "mypy==1.13.0",
    
    # Development Tools
    "ipython==8.31.0",
    "ipdb==0.13.13",
]

[project.urls]
Homepage = "https://github.com/resync/resync"
Documentation = "https://docs.resync.dev"
Repository = "https://github.com/resync/resync"
Issues = "https://github.com/resync/resync/issues"

[project.scripts]
resync = "resync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "ipython>=8.31.0",
]

[tool.uv.sources]
# Use PyPI by default, but allow local overrides
# Example: resync = { path = "../resync", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=resync --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["resync"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
