# =============================================================================
# Resync v5.3.0 - Tool Configuration
# =============================================================================

[metadata]
name = resync
version = 5.3.0
description = AI-powered interface for HCL Workload Automation
author = HWA Team
author_email = dev-team@hwa.ai
license = MIT
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .
include = resync*

# =============================================================================
# Import Linter - Detect Circular Imports
# =============================================================================
[importlinter]
root_package = resync

[importlinter:contract:layers]
name = No circular imports
type = layers
layers =
    resync
forbidden_layers =
    resync

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool:pytest]
testpaths = tests
asyncio_mode = auto
addopts = -v --tb=short
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# =============================================================================
# Coverage Configuration
# =============================================================================
[coverage:run]
source = resync
branch = True
omit =
    */tests/*
    */__pycache__/*
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if TYPE_CHECKING:
    if __name__ == .__main__.:
